Resolves: fdo#46038 don't copy page styles into temporary clipboard doc

writer rtf export has a nasty pgdsctbl extension
sd rtf import has nasty "if its got a table keyword in it its a table"
logic

Classically we never put our styles into the temporary clipboard, so fastest
and safest fix is to simply skip putting the page styles into it.